--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,24 +1,24 @@
 <mat-sidenav-container>
   <mat-sidenav
-    class="sidenav"
+    class="sidenav mat-elevation-z2"
     #sidenav
     [opened]="!isSmallScreen"
     [fixedInViewport]="true"
     [mode]="sidenavMode"
   >
-  <mat-toolbar color="primary">
-    Smart Examples
-  </mat-toolbar>
-  <mat-nav-list>
-    <a mat-list-item routerLink="/users">users</a>
-    <a mat-list-item routerLink="/formFieldInput">Form field input</a>
-    <a mat-list-item routerLink="/progBarSpinner">Progress bar and Spinner</a>
-    <a mat-list-item routerLink="/tabs">Tabs</a>
-    <a mat-list-item routerLink="/datepicker">Datepicker</a>
-    <a mat-list-item routerLink="/snackbar">Snackbar</a>
-    <a mat-list-item routerLink="/dialog">Dialog</a>
-    <a mat-list-item routerLink="/datatable">Datatable</a>
-  </mat-nav-list>
+    <mat-toolbar>
+      <img class="avatar mat-elevation-z4" src="../assets/mice.jpg">
+      <a routerLink="/users" class="name">Luiz Gustvo</a>
+      <p class="designation">Junior Software Developer</p>
+    </mat-toolbar>
+    <mat-divider></mat-divider>
+    <mat-nav-list>
+      <a *ngFor="let item of items_menu" mat-list-item
+      [routerLink]="item.link" routerLinkActive="active">
+        <mat-icon fontSet="fa" [fontIcon]="item.icon"></mat-icon>
+        <span>{{item.label}}</span>
+      </a>
+    </mat-nav-list>
   </mat-sidenav>
 
   <mat-sidenav-content>
