--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,10 @@
+<app-toolbar-menu
+  [menuTitle]="menuName"
+  [popText]="popText"
+  [shadow]="applyShadow"
+  [items_menu]="items_menu"
+  >
+</app-toolbar-menu>
 <mat-sidenav-container>
   <mat-sidenav
     class="sidenav mat-elevation-z2"
@@ -8,7 +15,7 @@
   >
     <mat-toolbar>
       <img class="avatar mat-elevation-z4" src="../assets/mice.jpg">
-      <a routerLink="/users" class="name">Luiz Gustvo</a>
+      <a routerLink="/users" class="name">Luiz Gustavo</a>
       <p class="designation">Junior Software Developer</p>
     </mat-toolbar>
     <mat-divider></mat-divider>
@@ -22,29 +29,23 @@
   </mat-sidenav>
 
   <mat-sidenav-content>
-    <mat-toolbar
-      class="toolbar-menu"
-      color="primary"
-      [class.mat-elevation-z4]="applyShadow"
-    >
-      <button
-        mat-icon-button
-        class="example-icon"
-        (click)="sidenav.toggle()"
-      >
-        <mat-icon>menu</mat-icon>
-      </button>
-      <span *ngIf="popText">My App</span>
-      <span class="example-spacer"></span>
-      <button mat-icon-button class="example-icon favorite-icon">
-        <mat-icon>favorite</mat-icon>
-      </button>
-      <button mat-icon-button class="example-icon">
-        <mat-icon>share</mat-icon>
-      </button>
-    </mat-toolbar>
     <mat-toolbar class="toolbar-submenu" color="primary">
-      <span *ngIf="!popText">My App</span>
+      <mat-toolbar-row class="toolbar-submenu-top">
+        <button
+          matTooltip="{{sidenav.opened ? 'Fechar menu' : 'abrir menu'}}"
+          matTooltipPosition="right"
+          mat-icon-button
+          class="example-icon"
+          (click)="sidenav.toggle()"
+        >
+          <mat-icon>
+            {{sidenav.opened ? 'close' : 'menu'}}
+          </mat-icon>
+        </button>
+      </mat-toolbar-row>
+      <mat-toolbar-row class="toolbar-submenu-title">
+        <span *ngIf="!popText">{{menuName}}</span>
+      </mat-toolbar-row>
     </mat-toolbar>
 
     <router-outlet></router-outlet>
