--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,13 +1,3 @@
-
-
-.example-spacer {
-  flex: 1 1 auto;
-}
-
-.sidenav {
-  width: 250px;
-}
-
 mat-sidenav-content {
   height: 100vh;
 }
@@ -16,24 +6,28 @@ mat-sidenav-container {
   height: 100vh;
 }
 
-.toolbar-menu {
-  position: fixed;
-  font-size: 1rem;
-  top: 0;
-  z-index: 1001;
+mat-toolbar-row {
+  padding: 0;
 }
 
 .toolbar-submenu {
-  height: 100px;
+  height: 205px;
   font-size: 2rem;
-  margin-top: 60px;
+  margin-top: 0px;
+  padding: 60px 0 0 0;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  background-color: #575757;
+
+  &-top {
+    height: 40px;
+  }
+
+  &-title {
+    padding: 52px 30px;
+  }
 }
-
-
-.title {
-  margin-bottom: 500px;
-}
-
 
 // - - - - sidebar - - - - //
 
