--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,9 +14,9 @@
     [mode]="sidenavMode"
   >
     <mat-toolbar>
-      <img class="avatar mat-elevation-z4" src="../assets/mice.jpg">
-      <a routerLink="/users" class="name">Luiz Gustavo</a>
-      <p class="designation">Junior Software Developer</p>
+      <img class="avatar mat-elevation-z4" src="https://source.unsplash.com/c_GmwfHBDzk/200x200">
+      <a routerLink="/users" class="name">Vinícius Andrade</a>
+      <p class="designation">Senior Software Engineer</p>
     </mat-toolbar>
     <mat-divider></mat-divider>
     <mat-nav-list>
